test/mutation_analysis/s0008_string_to_integer_atoi/hafis/starchat/mutants/41/result.txt
./test/mutation_analysis/s0008_string_to_integer_atoi/hafis/starchat/mutants/41/Solution.java:58: error: unreachable statement
        while (false) {
                      ^
1 error
